--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "http://paperimg.meiyuan.in/pap.er_v3.3.dmg"
+    window.DOWNLOAD_LINK = "http://paperimg.meiyuan.in/pap.er_v3.4.dmg"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
@@ -34,41 +34,39 @@
         ],
         download: "下载 pap.er",
         update: [
-          "更新时间: 2018.10.20",
+          "更新时间: 2019.11.13",
           "macOS X 10.11 或更高版本"
         ],
         contact: "联系我们",
         changelogs: [
           {
-            title: "v3.3 主要更新：",
+            title: "v3.4 主要更新：",
             content: [
-              "当前的随机壁纸可在「我的壁纸」找到，且能保存",
-              "可设置令所有屏幕都用相同壁纸，或都不同",
-              "兼容 macOS 10.14 Mojave",
-              "下版本预告：竖屏图片将以独立栏目出现"
+              "壁纸下载速度大幅提升",
+              "修复多项已知问题，强烈推荐更新",
+              "兼容 macOS 10.15 Catalina"
             ]
           }
         ],
       },
       [LANGS['zh-Hant']]: {
         description: [
-          "專為 Mac 設計的壁紙應用",
-          "每天享受來自全球新鮮精美的壁紙"
+          "專為 Mac 設計的墙紙應用",
+          "每天享受來自全球新鮮精美的墙紙"
         ],
-        download: "下載 pap.er",
+        download: "獲取 pap.er",
         update: [
-          "更新時間: 2018.10.20",
+          "更新時間: 2019.11.13",
           "macOS X 10.11 或更高版本"
         ],
         contact: "聯系我們",
         changelogs: [
           {
-            title: "v3.3 主要更新：",
+            title: "v3.4 主要更新：",
             content: [
-              "當前的隨機壁紙可在「我的壁紙」找到，且能保存",
-              "可設置令所有熒幕都用相同壁紙，或都不同",
-              "兼容 macOS 10.14 Mojave",
-              "下版本預告：竪屏圖片將以獨立欄目出現"
+              "墙纸的下載速度大幅提升",
+              "修復多項已知問題，強烈推薦升级",
+              "兼容 macOS 10.15 Catalina"
             ]
           }
         ]
@@ -80,18 +78,17 @@
         ],
         download: 'Download pap.er',
         update: [
-          "Updated at: 2018.10.20",
+          "Updated at: 2019.11.13",
           "macOS X 10.11 or higher version"
         ],
         contact: "contact us",
         changelogs: [
           {
-            title: "Changelog for v3.3",
+            title: "Changelog for v3.4",
             content: [
-              "You can find Random wallpapers in 'My wallpapers'",
-              "All screens can use the same wallpaper",
-              "Compatible with macOS 10.14 Mojave",
-              "Next version: the vertical wallpapers will spil to separate columns"
+              "Improved download speed",
+              "Fix many known issues",
+              "Compatible with macOS 10.15 Catalina"
             ]
           }
         ]
