--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>pap.er - 专为 Mac 设计的壁纸应用</title>
   <meta name="description" content="pap.er - 专为Mac设计的壁纸应用；每天享受来自全球新鲜精美的壁纸，喜欢寻找壁纸来改变心情？pap.er 适合你">
-  <meta name="keywords" lang="ZH-CN" content="pap.er,paper,壁纸,墙纸,mac壁纸,随机壁纸,竖屏壁纸">
+  <meta name="keywords" lang="ZH-CN" content="pap.er,paper,壁纸,墙纸,桌布,mac壁纸,随机壁纸,竖屏壁纸">
   <meta name="Keywords" lang="en" content="pap.er,paper,wallpaper,wallpaper mac,random wallpaper">
   <link rel="apple-touch-icon" href="./favicon.png">
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
@@ -34,7 +34,7 @@
         ],
         download: "下载 pap.er",
         update: [
-          "更新时间: 2019.11.13",
+          "更新时间: 2019.11.28",
           "macOS X 10.11 或更高版本"
         ],
         contact: "联系我们",
@@ -42,7 +42,7 @@
           {
             title: "v3.4 主要更新：",
             content: [
-              "壁纸下载速度大幅提升",
+              "壁纸下载速度提升",
               "修复多项已知问题，强烈推荐更新",
               "兼容 macOS 10.15 Catalina"
             ]
@@ -51,12 +51,12 @@
       },
       [LANGS['zh-Hant']]: {
         description: [
-          "專為 Mac 設計的墙紙應用",
-          "每天享受來自全球新鮮精美的墙紙"
+          "專為 Mac 設計的桌布應用",
+          "每天享受來自全球新鮮精美的桌布"
         ],
-        download: "獲取 pap.er",
+        download: "下載 pap.er",
         update: [
-          "更新時間: 2019.11.13",
+          "更新時間: 2019.11.28",
           "macOS X 10.11 或更高版本"
         ],
         contact: "聯系我們",
@@ -64,8 +64,8 @@
           {
             title: "v3.4 主要更新：",
             content: [
-              "墙纸的下載速度大幅提升",
-              "修復多項已知問題，強烈推薦升级",
+              "桌布下載速度提升",
+              "修復多項已知問題，強烈推薦更新",
               "兼容 macOS 10.15 Catalina"
             ]
           }
@@ -78,7 +78,7 @@
         ],
         download: 'Download pap.er',
         update: [
-          "Updated at: 2019.11.13",
+          "Updated at: 2019.11.28",
           "macOS X 10.11 or higher version"
         ],
         contact: "contact us",
@@ -87,7 +87,7 @@
             title: "Changelog for v3.4",
             content: [
               "Improved download speed",
-              "Fix many known issues",
+              "Fixed many known issues",
               "Compatible with macOS 10.15 Catalina"
             ]
           }
