--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "http://paperimg.meiyuan.in/pap.er_v3.4.dmg"
+    window.DOWNLOAD_LINK = "http://paperimg.meiyuan.in/pap.er_v3.5.dmg"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
@@ -32,19 +32,20 @@
           "专为 Mac 设计的壁纸应用",
           "每天享受来自全球新鲜精美的壁纸"
         ],
-        download: "下载 pap.er",
+        download: "下载 pap.er v3.5",
         update: [
-          "更新时间: 2019.11.28",
+          "更新时间: 2020.3.4",
           "macOS X 10.11 或更高版本"
         ],
         contact: "联系我们",
         changelogs: [
           {
-            title: "v3.4 主要更新：",
+            title: "近期更新：",
             content: [
-              "壁纸下载速度提升",
               "修复多项已知问题，强烈推荐更新",
-              "兼容 macOS 10.15 Catalina"
+              "壁纸下载速度提升",
+              "兼容 macOS 10.15 Catalina",
+              "当前的随机壁纸可在「我的壁纸」找到及保存"
             ]
           }
         ],
@@ -54,19 +55,20 @@
           "專為 Mac 設計的桌布應用",
           "每天享受來自全球新鮮精美的桌布"
         ],
-        download: "下載 pap.er",
+        download: "下載 pap.er v3.5",
         update: [
-          "更新時間: 2019.11.28",
+          "更新時間: 2020.3.4",
           "macOS X 10.11 或更高版本"
         ],
         contact: "聯系我們",
         changelogs: [
           {
-            title: "v3.4 主要更新：",
+            title: "近期更新：",
             content: [
-              "桌布下載速度提升",
               "修復多項已知問題，強烈推薦更新",
-              "兼容 macOS 10.15 Catalina"
+              "桌布下載速度提升",
+              "兼容 macOS 10.15 Catalina",
+              "當前的隨機桌布可在「我的桌布」找到及保存"
             ]
           }
         ]
@@ -76,19 +78,20 @@
           'Elegant Wallpaper App for macOS.',
           'Deliver fresh and stunning wallpapers everyday.'
         ],
-        download: 'Download pap.er',
+        download: 'Get pap.er v3.5',
         update: [
-          "Updated at: 2019.11.28",
+          "Updated at: 2020.3.4",
           "macOS X 10.11 or higher version"
         ],
         contact: "contact us",
         changelogs: [
           {
-            title: "Changelog for v3.4",
+            title: "Recently updated",
             content: [
-              "Improved download speed",
-              "Fixed many known issues",
-              "Compatible with macOS 10.15 Catalina"
+              "Fixed many known issues.",
+              "Improved download speed.",
+              "Compatible with macOS 10.15 Catalina.",
+              "Current random wallpaper can be found in history."
             ]
           }
         ]
