--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "http://paperimg.meiyuan.in/pap.er_v3.5.1.dmg"
+    window.DOWNLOAD_LINK = "./app/pap.er-v3.6.zip"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
@@ -32,20 +32,19 @@
           "专为 Mac 设计的壁纸应用",
           "每天享受来自全球新鲜精美的壁纸"
         ],
-        download: "下载 pap.er v3.5",
+        download: "新版即将发布",
         update: [
-          "更新时间: 2020.3.7",
-          "macOS X 10.11 或更高版本"
+          "更新时间: 2022/7",
+          "macOS 10.15 或更高版本"
         ],
         contact: "联系我们",
         changelogs: [
           {
-            title: "近期更新：",
+            title: "致亲爱的用户：",
             content: [
-              "修复多项已知问题，强烈推荐更新",
-              "壁纸下载速度提升",
-              "兼容 macOS 10.15 Catalina",
-              "当前的随机壁纸可在「我的壁纸」找到及保存"
+              "感谢大家的来信问候和关心",
+              "请再忍耐几天",
+              "新版 pap.er 将在七月份发布，敬请期待"
             ]
           }
         ],
@@ -55,20 +54,19 @@
           "專為 Mac 設計的桌布應用",
           "每天享受來自全球新鮮精美的桌布"
         ],
-        download: "下載 pap.er v3.5",
+        download: "新版即將推出",
         update: [
-          "更新時間: 2020.3.7",
-          "macOS X 10.11 或更高版本"
+          "更新時間: 2022/7",
+          "macOS 10.15 或更高版本"
         ],
         contact: "聯系我們",
         changelogs: [
           {
-            title: "近期更新：",
+            title: "致親愛的用戶：",
             content: [
-              "修復多項已知問題，強烈推薦更新",
-              "桌布下載速度提升",
-              "兼容 macOS 10.15 Catalina",
-              "當前的隨機桌布可在「我的桌布」找到及保存"
+            "感謝大家的來信問候和關心",
+            "請再忍耐幾天",
+            "新版 pap.er 將在七月份推出，敬請期待"
             ]
           }
         ]
@@ -78,20 +76,19 @@
           'Elegant Wallpaper App for macOS.',
           'Deliver fresh and stunning wallpapers everyday.'
         ],
-        download: 'Get pap.er v3.5',
+        download: 'Coming Soon',
         update: [
-          "Updated at: 2020.3.7",
-          "macOS X 10.11 or higher version"
+          "Updated at: 2022/7",
+          "macOS 10.15 or higher version"
         ],
         contact: "contact us",
         changelogs: [
           {
-            title: "Recently updated",
+            title: "To dear users:",
             content: [
-              "Fixed many known issues.",
-              "Improved download speed.",
-              "Compatible with macOS 10.15 Catalina.",
-              "Current random wallpaper can be found in history."
+              "Thank you for your greetings and concern",
+              "Please be patient for a few more days",
+              "The new version of pap.er will be released in July"
             ]
           }
         ]
