--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "./app/pap.er-v3.6.zip"
+    window.DOWNLOAD_LINK = "https://paperapp.net/app/pap.er-v3.6.zip"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
