--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>pap.er - 专为 Mac 设计的壁纸应用</title>
-  <meta name="description" content="pap.er - 专为Mac设计的壁纸应用；每天享受来自全球新鲜精美的壁纸，喜欢寻找壁纸来改变心情？pap.er 适合你">
+  <meta name="description" content="2022年8月更新 pap.er - 专为Mac设计的壁纸应用；每天享受来自全球新鲜精美的壁纸，喜欢寻找壁纸来改变心情？pap.er 适合你">
   <meta name="keywords" lang="ZH-CN" content="pap.er,paper,壁纸,墙纸,桌布,mac壁纸,随机壁纸,竖屏壁纸">
   <meta name="Keywords" lang="en" content="pap.er,paper,wallpaper,wallpaper mac,random wallpaper">
-  <link rel="apple-touch-icon" href="./favicon.png">
+  <link rel="apple-touch-icon" href="./icon_128x128@2x.png">
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "https://paperapp.net/app/pap.er-v3.6.zip"
+    window.DOWNLOAD_LINK = "https://paperapp.net/app/pap.er-v5.0.2.dmg"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
@@ -32,19 +32,18 @@
           "专为 Mac 设计的壁纸应用",
           "每天享受来自全球新鲜精美的壁纸"
         ],
-        download: "新版即将发布",
+        download: "下载 pap.er 最新版",
         update: [
-          "更新时间: 2022/7",
-          "macOS 10.15 或更高版本"
+        "爱出者爱返，福往者福来。mail: hi@paperapp.net"
         ],
-        contact: "联系我们",
+        contact: "仍在使用旧版 macOS？获取 pap.er v3.6",
         changelogs: [
           {
-            title: "致亲爱的用户：",
+            title: "新版本发布 (2022/8/20)：",
             content: [
-              "感谢大家的来信问候和关心",
-              "请再忍耐几天",
-              "新版 pap.er 将在七月份发布，敬请期待"
+              "完全重写了软件，交互界面也更精致了。",
+              "兼容 Apple M1 芯片，要求 macOS 11 或更高系统版本。",
+              "今后我们会经常更新版本，新功能将陆续呈现。"
             ]
           }
         ],
@@ -54,19 +53,18 @@
           "專為 Mac 設計的桌布應用",
           "每天享受來自全球新鮮精美的桌布"
         ],
-        download: "新版即將推出",
+        download: "下載 pap.er 最新版",
         update: [
-          "更新時間: 2022/7",
-          "macOS 10.15 或更高版本"
+          "愛出者愛返，福往者福來。mail: hi@paperapp.net"
         ],
-        contact: "聯系我們",
+        contact: "仍在使用舊版 macOS？獲取 pap.er v3.6",
         changelogs: [
           {
-            title: "致親愛的用戶：",
+            title: "新版本發佈 (2022/8/20)：",
             content: [
-            "感謝大家的來信問候和關心",
-            "請再忍耐幾天",
-            "新版 pap.er 將在七月份推出，敬請期待"
+            "完全重構了應用程式，交互介面也更精緻了。",
+            "完全兼容 Apple M1 晶片，要求 macOS 11 或更高系統版本。",
+            "今後我們會經常更新版本，新功能將陸續呈現。"
             ]
           }
         ]
@@ -76,19 +74,19 @@
           'Elegant Wallpaper App for macOS.',
           'Deliver fresh and stunning wallpapers everyday.'
         ],
-        download: 'Coming Soon',
+        download: 'Get pap.er for macOS',
         update: [
-          "Updated at: 2022/7",
-          "macOS 10.15 or higher version"
+          "Updated at: 2022/8/20",
+          "macOS 10.11 Big Sur or higher version"
         ],
-        contact: "contact us",
+        contact: "Contact us",
         changelogs: [
           {
-            title: "To dear users:",
+            title: "Changelog (2022/8/20):",
             content: [
-              "Thank you for your greetings and concern",
-              "Please be patient for a few more days",
-              "The new version of pap.er will be released in July"
+            "Now the interactive interface is more refined.",
+            "Compatible with Apple Silicon, macOS 11 or later required. ",
+            "More features coming soon."
             ]
           }
         ]
@@ -96,17 +94,16 @@
     }
   </script>
   <script src="./dist/build.js"></script>
-  <script type="text/javascript">
-      (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-105801015-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YQNS6MT05L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YQNS6MT05L');
+</script>
 </body>
 
 </html>
