--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
         ],
         download: 'Get pap.er for macOS',
         update: [
-          "Updated at: 2022/8/20",
-          "macOS 10.11 Big Sur or higher version"
+          "Thanks for your love. (mail: hi@paperapp.net)"
         ],
-        contact: "Contact us",
+        contact: "Get pap.er v3.6 for older macOS",
         changelogs: [
           {
             title: "Changelog (2022/8/20):",
