--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "https://paperapp.net/app/pap.er-v5.0.2.dmg"
+    window.DOWNLOAD_LINK = "https://dl.nsns.in/paper-v5.0.2.dmg"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
