--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "https://dl.nsns.in/paper-v5.0.3.dmg"
+    window.DOWNLOAD_LINK = "https://dl.nsns.in/paper-v5.0.4.dmg"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
@@ -34,7 +34,8 @@
         ],
         download: "下载 pap.er 最新版",
         update: [
-        "爱出者爱返，福往者福来。mail: hi@paperapp.net"
+        "爱出者爱返，福往者福来。",
+        "mail: hi@paperapp.net"
         ],
         contact: "仍在使用旧版 macOS？获取 pap.er v3.6",
         changelogs: [
@@ -43,7 +44,7 @@
             content: [
               "完全重写了软件，交互界面也更精致了。",
               "兼容 Apple M1 芯片，要求 macOS 11 或更高系统版本。",
-              "今后我们会经常更新版本，新功能将陆续呈现。"
+              "检测到新版时，可在软件内一键升级。"
             ]
           }
         ],
@@ -55,7 +56,8 @@
         ],
         download: "下載 pap.er 最新版",
         update: [
-          "愛出者愛返，福往者福來。mail: hi@paperapp.net"
+          "愛出者愛返，福往者福來。",
+          "mail: hi@paperapp.net"
         ],
         contact: "仍在使用舊版 macOS？獲取 pap.er v3.6",
         changelogs: [
@@ -64,7 +66,7 @@
             content: [
             "完全重構了應用程式，交互介面也更精緻了。",
             "完全兼容 Apple M1 晶片，要求 macOS 11 或更高系統版本。",
-            "今後我們會經常更新版本，新功能將陸續呈現。"
+            "檢測到新版時，可在軟件內一鍵升級。"
             ]
           }
         ]
@@ -76,7 +78,8 @@
         ],
         download: 'Get pap.er for macOS',
         update: [
-          "Thanks for your love. (mail: hi@paperapp.net)"
+          "Thanks for your love. ",
+          "mail: hi@paperapp.net"
         ],
         contact: "Get pap.er v3.6 for older macOS",
         changelogs: [
@@ -85,7 +88,7 @@
             content: [
             "Now the interactive interface is more refined.",
             "Compatible with Apple Silicon, macOS 11 or later required. ",
-            "More features coming soon."
+            "When the latest version is available, it can be updated with one click."
             ]
           }
         ]
