--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
         ],
         download: "下载 pap.er 最新版",
         update: [
-        "爱出者爱返，福往者福来。",
-        "mail: hi@paperapp.net"
+        "爱出者爱返，福往者福来。mail: hi@paperapp.net"
         ],
         contact: "仍在使用旧版 macOS？获取 pap.er v3.6",
         changelogs: [
           {
             title: "新版本发布 (2022/8/31)：",
             content: [
-              "完全重写了软件，交互界面也更精致了。",
-              "兼容 Apple M1 芯片，要求 macOS 11 或更高系统版本。",
-              "检测到新版时，可在软件内一键升级。"
+              "需要 macOS 11 Big Sur 或更高系统版本；",
+              "已兼容 Apple M1、M2 芯片；",
+              "若仍在使用旧版 macOS，请下载页面底部的 v3.6 版本。"
             ]
           }
         ],
@@ -56,17 +55,16 @@
         ],
         download: "下載 pap.er 最新版",
         update: [
-          "愛出者愛返，福往者福來。",
-          "mail: hi@paperapp.net"
+          "愛出者愛返，福往者福來。mail: hi@paperapp.net"
         ],
         contact: "仍在使用舊版 macOS？獲取 pap.er v3.6",
         changelogs: [
           {
-            title: "新版本發佈 (2022/8/31)：",
+            title: "新版本釋出 (2022/8/31)：",
             content: [
-            "完全重構了應用程式，交互介面也更精緻了。",
-            "完全兼容 Apple M1 晶片，要求 macOS 11 或更高系統版本。",
-            "檢測到新版時，可在軟件內一鍵升級。"
+            "需要 macOS 11 Big Sur 或更高系統版本；",
+            "已兼容 Apple M1、M2 系列；",
+            "若仍在使用舊版 macOS，請下載頁面底部的 v3.6 版本。"
             ]
           }
         ]
@@ -78,17 +76,16 @@
         ],
         download: 'Get pap.er for macOS',
         update: [
-          "Thanks for your love. ",
-          "mail: hi@paperapp.net"
+          "Thanks for your love. (mail: hi@paperapp.net)"
         ],
         contact: "Get pap.er v3.6 for older macOS",
         changelogs: [
           {
             title: "Changelog (2022/8/31):",
             content: [
-            "Now the interactive interface is more refined.",
-            "Compatible with Apple Silicon, macOS 11 or later required. ",
-            "When the latest version is available, it can be updated with one click."
+            "Requirements: macOS 11 Big Sur or later. ",
+            "Now compatible on both Apple Silicon (M1, M2 etc) as well as macOS 12 Monterey.",
+            "For macOS 10.15, please check the v3.6 version from the bottom of the page.",
             ]
           }
         ]
