--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
           "每天享受来自全球新鲜精美的壁纸"
         ],
         download: "下载 pap.er 最新版",
-        update: [
-        "爱出者爱返，福往者福来。mail: hi@paperapp.net"
-        ],
-        contact: "仍在使用旧版 macOS？获取 pap.er v3.6",
+        contact: "联系我们",
+        update: "仍在使用旧版 macOS？获取 pap.er v3.6",
         changelogs: [
           {
             title: "新版本发布 (2022/8/31)：",
@@ -54,10 +52,8 @@
           "每天享受來自全球新鮮精美的桌布"
         ],
         download: "下載 pap.er 最新版",
-        update: [
-          "愛出者愛返，福往者福來。mail: hi@paperapp.net"
-        ],
-        contact: "仍在使用舊版 macOS？獲取 pap.er v3.6",
+        contact: "給我們發郵件",
+        update: "仍在使用舊版 macOS？獲取 pap.er v3.6",
         changelogs: [
           {
             title: "新版本釋出 (2022/8/31)：",
@@ -75,10 +71,8 @@
           'Deliver fresh and stunning wallpapers everyday.'
         ],
         download: 'Get pap.er for macOS',
-        update: [
-          "Thanks for your love. (mail: hi@paperapp.net)"
-        ],
-        contact: "Get pap.er v3.6 for older macOS",
+        contact: "Contact us",
+        update: "Get pap.er v3.6 for older macOS",
         changelogs: [
           {
             title: "Changelog (2022/8/31):",
