--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>pap.er - 专为 Mac 设计的壁纸应用</title>
-  <meta name="description" content="2023年3月更新 pap.er - 专为Mac设计的壁纸应用；每天享受来自全球新鲜精美的壁纸，喜欢寻找壁纸来改变心情？pap.er 适合你">
+  <meta name="description" content="2023年4月更新 pap.er - 专为Mac设计的壁纸应用；每天享受来自全球新鲜精美的壁纸，喜欢寻找壁纸来改变心情？pap.er 适合你">
   <meta name="keywords" lang="ZH-CN" content="pap.er,paper,壁纸,墙纸,桌布,mac壁纸,随机壁纸,竖屏壁纸">
   <meta name="Keywords" lang="en" content="pap.er,paper,wallpaper,wallpaper mac,random wallpaper">
   <link rel="apple-touch-icon" href="./icon_128x128@2x.png">
@@ -18,7 +18,7 @@
 <body>
   <div class="content"></div>
   <script type="text/javascript">
-    window.DOWNLOAD_LINK = "https://s3.nxn.fun/dl/paper.dmg"
+    window.DOWNLOAD_LINK = "https://apps.apple.com/app/pap-er-%E4%BC%98%E9%9B%85%E5%A3%81%E7%BA%B8/id1639052102"
 
     window.LANGS = {
       'zh-Hans-CN': 2,
@@ -34,7 +34,7 @@
         ],
         download: "下载 pap.er 最新版",
         contact: "联系我们",
-        update: "仍在使用旧版 macOS？获取 pap.er v3.6",
+        update: "仍在使用旧版 macOS？获取 pap.er v3.7",
         changelogs: [
           {
             title: "新版本发布 (2023/3/25)：",
@@ -53,7 +53,7 @@
         ],
         download: "下載 pap.er 最新版",
         contact: "給我們發郵件",
-        update: "仍在使用舊版 macOS？獲取 pap.er v3.6",
+        update: "仍在使用舊版 macOS？獲取 pap.er v3.7",
         changelogs: [
           {
             title: "新版本釋出 (2023/3/25)：",
@@ -72,7 +72,7 @@
         ],
         download: 'Get pap.er for macOS',
         contact: "Contact us",
-        update: "Get pap.er v3.6 for older macOS",
+        update: "Get pap.er v3.7 for older macOS",
         changelogs: [
           {
             title: "Changelog (2023/3/25):",
