--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         <span class="faq-toggle"></span>
                     </div>
                     <div class="faq-answer">
-                        <p>新版 pap.er 5.x （Mac Appstore 版本）需要 macOS 11.0 及以上系统版本，所有壁纸均由编辑精心挑选。旧版 pap.er 3.x 仍然兼容 Mac OS X 10.14+，但壁纸未经人工筛选。</p>
+                        <p>新版 pap.er 5.x （Mac App Store 版本）需要 macOS 11.0 及以上系统版本，所有壁纸均由编辑精心挑选。旧版 pap.er 3.x 仍然兼容 Mac OS X 10.14+，但壁纸未经人工筛选。</p>
                     </div>
                 </div>
                 <div class="faq-item">
