--- a/index.html
+++ b/index.html
@@ -339,5 +339,12 @@
 
   gtag('config', 'G-YQNS6MT05L');
 </script>
-
+<script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
+<script>
+    window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/speed-insights/script.js"></script>
 </html>
