--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <img src="./assets/download-badge/zh-Hans-CN.svg" alt="在 Mac App Store 上下载" id="download-badge">
             </a>
             <p class="download-links">
-                <a href="./app/paper-v5.3.0.dmg" id="direct-download">下载 dmg 文件</a> | <a href="./app/pap.er-v3.6.dmg" id="old-version-download">下载版 for MacOS X 10.14+</a>
+                <a href="./app/pap.er-v5.3.0.dmg" id="direct-download">下载 dmg 文件</a> | <a href="./app/pap.er-v3.6.dmg" id="old-version-download">下载版 for MacOS X 10.14+</a>
             </p>
         </div>
     </header>
