--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="./assets/download-badge/zh-Hans-CN.svg" alt="在 Mac App Store 上下载" id="download-badge">
             </a>
             <p class="download-links">
-                <a href="./app/pap.er-v5.3.1.dmg" id="direct-download">下载 dmg 文件(new!)</a> | <a href="./app/pap.er-v3.7.dmg" id="old-version-download">下载版 for MacOS X 10.13+</a>
+                <a href="./app/pap.er_v5.3.1.dmg" id="direct-download">下载 dmg 文件(new!)</a> | <a href="./app/pap.er_v3.7.dmg" id="old-version-download">下载版 for MacOS X 10.13+</a>
             </p>
         </div>
     </header>
