--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="pap.er - 专业Mac壁纸应用 | 每日精选高清壁纸">
     <meta property="og:description" content="pap.er是专为Mac设计的壁纸应用，每天提供全球精选高清壁纸。智能分类、一键设置、收藏功能，让您的Mac桌面焕然一新。">
     <meta property="og:image" content="./assets/screenshots/720p/s00047.webp">
-    <meta property="og:url" content="https://paper.meiyuan.in">
+    <meta property="og:url" content="https://www.paperapp.net">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="pap.er - 专业Mac壁纸应用 | 每日精选高清壁纸">
